fix: make informative content more readable

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
     padding: 20px 10px;
     color: #fff;
     font-family:'Courier New', Courier, monospace;
-
+    text-shadow: 1px 2px 2px rgba(0, 0, 0);
     background-image: url(https://i.redd.it/yss7h9xgbgt71.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -84,7 +84,7 @@ nav button:focus::after {
     max-width: 1022px;
     padding: 40px;
     margin: 50px auto;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(88, 88, 88, 0.1);
     backdrop-filter: blur(15px);
     border-radius: 30px;
     border-left: rgba(255, 255, 255, 0.3), 1px, solid;;
@@ -99,8 +99,10 @@ nav button:focus::after {
 }
 
 footer {
-    font-size: 1.2em;
+    font-size: 1.4em;
+    font-weight: 600;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 footer a {
@@ -111,6 +113,13 @@ footer a {
 footer a:hover {
     transition: ease-out 0.3s;
     color: rgb(255, 149, 149);
+}
+
+.home-info-div, 
+.about-us-info,
+.menu-card,
+.contact-details-list {
+    font-weight: 500;
 }
 
 /* Home Page */
@@ -150,7 +159,7 @@ footer a:hover {
     border-radius: 30px;
     padding: 30px;
     max-width: 450px;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.25);
 }
 
 .menu-card:hover,
